--- a/src/frontend/static/style.css
+++ b/src/frontend/static/style.css
@@ -1,8 +1,14 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;700&display=swap');
+
+body {
+    font-family: 'Hind', sans-serif;
+}
+
 .pure-g {
     text-align: center;
 }
-            
+
 .navbar {
     height: 60px;
     padding: 20px;
