--- a/src/frontend/static/style.css
+++ b/src/frontend/static/style.css
@@ -5,25 +5,21 @@ body {
     font-family: 'Hind', sans-serif;
 }
 
-.pure-g {
-    text-align: center;
-}
-
+/*
 .navbar {
     height: 60px;
     padding: 20px;
     display: inline;
     text-align: center;
-    background: #f2e8d0; /*f5f5f5;*/
+    background: #f2e8d0; /*f5f5f5;
 }
 
 .navbar h2 {
     margin: 0;
 }
 
-.navbar-header {
+.navbar-brand {
     font-size: 28px;
-    margin: 0;
     color: #543400;
     font-weight: bold;
 }
@@ -33,9 +29,14 @@ body {
     width:  32px;
     float:  left;
 }
-
-.button-brew {
-    background-color: rgb(99, 85, 52);
+*/
+.btn-brew {
+    background-color: rgb(237, 149, 71);
     color:  white;
     margin-left: 8px;
+    border-radius: 8px;
+}
+
+.btn {
+    border-radius: 8px;
 }
