--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -11,6 +11,9 @@ a.navbar-brand {
     color: #543400;
 }
 
+h1,h2,h3,h4,h5,h6 {
+    font-weight: 600;
+}
 
 input.form-control {
     border-radius: 20px;
