better input bg

--- a/src/frontend/App.scss
+++ b/src/frontend/App.scss
@@ -11,7 +11,7 @@ $theme-colors: (
 $body-color: $dark;
 $body-bg: $light;
 
-$input-bg: rgb(255, 255, 255);
+$input-bg: #f8f1e2;
 
 $headings-font-weight: 600;
 
