better input bg

--- a/frontend/App.scss
+++ b/frontend/App.scss
@@ -11,7 +11,7 @@ $theme-colors: (
 $body-color: $dark;
 $body-bg: $light;
 
-$input-bg: #f8f1e2;
+$input-bg: #faf5eb;
 
 $headings-font-weight: 600;
 
