--- a/frontend/App.scss
+++ b/frontend/App.scss
@@ -35,3 +35,23 @@ $btn-border-radius: 10px;
 $badge-font-size: 1em;
 
 @import "~bootstrap/scss/bootstrap";
+
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;700&display=swap');
+
+body {
+    font-family: 'Hind', sans-serif;
+}
+
+a.navbar-brand {
+    font-size: 28px;
+    font-weight: 600;
+    color: #543400;
+}
+
+input.form-control {
+    border-radius: 20px;
+}
+
+.badge {
+    margin: 2px;
+}
