--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -10,6 +10,7 @@ $white: #fff;
 
 $theme-colors: (
     "primary": $primary,
+    "secondary": $secondary,
     "light": $light,
     "dark": $dark
 );
