show error and remove border from alerts

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -41,6 +41,10 @@ $btn-border-radius: 12px;
 // Badges
 $badge-font-size: 1em;
 
+// Alerts
+$alert-border-radius: 0;
+$alert-border-width: 0;
+
 // Fonts
 $font-family-sans-serif: 'Hind' !default;
 
